<resources>
    <string name="app_name">OjaExpress</string>


    <!-- Welcome Screen -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Oja Express</string>
    <string name="slide_1_desc">Welcome to OjaExpress Whole New Experience</string>

    <string name="slide_2_title">Groceries</string>
    <string name="slide_2_desc">Get your groceries delivered from your local store</string>

    <string name="slide_3_title">Get Comfortable</string>
    <string name="slide_3_desc">Local Groceries at your finger tips</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> Ojaexpress -> clear data</string>
    <string name="play_again">Play Again</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login Validation-->
    <string name="empty_email">Please provide an email.</string>
    <string name="empty_username">Please provide Username.</string>
    <string name="empty_lastname">Please provide Your First Name.</string>
    <string name="empty_firstname">Please provide Your Last name.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>
    <!-- Strings -->
    <string name="welcom">Welcome Back!</string>
    <string name="addto">Add To</string>
    <string name="quan">Quantity available</string>
    <string name="logintodo">Login with Your Email and Password</string>
    <string name="available">We are available in</string>
    <string name="offer">Free Delivery on Your First Order</string>
    <string name="terms">By Signing up you agree  to OjaExpress Terms of Service and Privacy</string>
    <string name="already">Already have an account?</string>
    <string name="link">We will send you a link to reset password</string>
    <string name="groceries">Get your groceries delivered from local stores</string>
    <string name="btn_link_to_register">Dont Have an Account?</string>
    <string name="flink">We will send you link to reset your Password</string>
    <!-- inputs -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="cupassword">Current Password</string>
    <string name="nepassword">New Password</string>
    <string name="chpassword">Choose a Password</string>
    <string name="email">Email</string>
    <string name="zip">Enter Zip Code</string>
    <string name="search">Search Items</string>

    <string name="password_error">Password cannot be empty</string>

    <!-- Buttons -->
    <string name="log_in">Sign in</string>
    <string name="login">Log in</string>
    <string name="register">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="save">Save</string>
    <string name="cart">Add to Cart</string>
    <string name="fpass">Forgot Pasword?</string>
    <string name="account">Dont Have Account? Sign Up</string>
    <string name="reset">Reset Password</string>
    <string name="cont">Continue</string>
    <string name="wish">WishList</string>
    <string name="giftcard">Buy Gift Card</string>
    <string name="promo">Promo Code</string>
    <string name="logout">Logout</string>
    <string name="alread">Already Have An Account?</string>

    <!-- Nav-->
    <string name="nav_home">Home</string>
    <string name="nav_account">My account</string>
    <string name="nav_search">Search</string>
    <string name="nav_oja">OjaExpress</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_store">Stores</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_order">My Orders</string>
    <string name="nav_promo">Add Promo Code</string>
    <string name="nav_group">Group Carts</string>
    <string name="nav_gift">Buy Gift Card</string>
    <string name="nav_list">List and Recipes</string>
    <string name="nav_cat">Categories</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <dimen name="fab_margin">16dp</dimen>
    <dimen name="item_offset">10dp</dimen>
    <dimen name="detail_backdrop_height">250dp</dimen>
    <dimen name="backdrop_title">30dp</dimen>
    <dimen name="backdrop_subtitle">18dp</dimen>
    <dimen name="card_margin">5dp</dimen>
    <dimen name="card_album_radius">0dp</dimen>
    <dimen name="avatar_height">160dp</dimen>
    <dimen name="album_title_padding">10dp</dimen>
    <dimen name="album_title">15dp</dimen>
    <dimen name="songs_count_padding_bottom">5dp</dimen>
    <dimen name="songs_count">12dp</dimen>
    <dimen name="overflow_width">20dp</dimen>
    <dimen name="overflow_height">30dp</dimen>
    <dimen name="overflow_margin_top">10dp</dimen>

</resources>
