<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/ojaemblem" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:gravity="center_horizontal"
        android:text="@string/welcom" />

    <TextView
        android:id="@+id/logintodo"

        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:textSize="20sp"
        android:textColor="@color/colorblack2"
        android:gravity="center_horizontal"
        android:text="@string/logintodo" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_weight="0.83"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_border_bottom"
                android:cursorVisible="true"
                android:gravity="center|left|bottom"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:paddingBottom="10dp"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/colorBlack"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/input_border_bottom"
                android:cursorVisible="true"
                android:gravity="center|left|bottom"
                android:inputType="textPassword"
                android:maxLength="50"
                android:paddingBottom="10dp"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>


        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorGreen"
            android:text="@string/log_in"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btnLinkToPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@null"
            android:text="@string/fpass"
            android:textAllCaps="false"
            android:textColor="@color/colorGreen"
            android:textSize="15dp" />

    </LinearLayout>

    <ProgressBar android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="40dp" android:id="@+id/progress_login"/>

</LinearLayout>








